// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Message should stage message metadata with class name 1`] = `
{
  "decorator": "Message",
  "name": "TestMsg",
}
`;

exports[`Message should stage message metadata with custom name 1`] = `
{
  "decorator": "Message",
  "name": "CustomName",
}
`;
